# examples-craft-cpp

Cpp_Features/Concepts/: CMakeLists.txt
Cpp_Features/Concepts/src/: CMakeLists.txt  Concepts.cpp
Cpp_Features/Container/src/: Container.cpp
Cpp_Features/CustomLiterals/src/: CustomLiterals  CustomLiterals.cpp
Cpp_Features/Exceptions/src/: Exceptions  Exceptions.cpp
Cpp_Features/IntArray_Move_Semantics/src/: IntArray  IntArray.cpp
Cpp_Features/SmartPointers/src/: SmartPointers  SmartPointers.cpp
Design_Patterns/AbstractFactory/src/: italianpizza.h  main  pizzafactory.h
Design_Patterns/Command/src/: command.h
Design_Patterns/Composite/src/: main  main.cpp  nodes.h
Design_Patterns/Decorator/: CMakeLists.txt
Design_Patterns/Decorator/src/: CMakeLists.txt  main.cpp
Design_Patterns/Observer/: CMakeLists.txt
Design_Patterns/Observer/src/: CMakeLists.txt  main.cpp  subject.cpp  subject.h
Design_Patterns/Observer_adv/: CMakeLists.txt
Design_Patterns/Observer_adv/src/: subject.cpp
Design_Patterns/Proxy/src/: proxy.cpp
Design_Patterns/Strategy/src/: Strategy.cpp
Other_Examples/BuilderPattern/: CMakeLists.txt
Other_Examples/BuilderPattern/src/: SensorReading.h
Other_Examples/BuilderPattern/test/: CMakeLists.txt  SensorReadingBuilder.h  testsuite.cpp
Other_Examples/ConstructorInjection/src/: ConstructorInjection  ConstructorInjection.cpp
Other_Examples/Geometry/src/: Geometry  Geometry.cpp
Other_Examples/GildedRoseKata/: CMakeLists.txt
Other_Examples/GoogleMock/: CMakeLists.txt
Other_Examples/MockedStateMachine/: CMakeLists.txt
(+23 files in other folders)
